# mlops-assignment

./: .env.example  .gitignore  INSTRUCTOR_NOTES.md  README.md  REPORT.md  pyproject.toml
agent/: execution.py  graph.py  prompts.py  schema.py  server.py
evals/: eval_set_debug.jsonl  run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
load_test/: driver.py
results/: eval_after_tuning.json  eval_baseline.json  load_test_phase6_baseline_rps10.json
scripts/: load_data.py  run_long_query_batch.py  start_vllm.sh
