[project]
name = "mlops-assignment"
version = "0.1.0"
description = "MLOps home assignment: LLM inference + observability"
requires-python = ">=3.11"
dependencies = [
    # Serving
    "vllm>=0.7.0",
    # Agent
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langfuse>=2.50.0",
    # Server wrapper
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    # Data + utilities
    "datasets>=2.20.0",
    "python-dotenv>=1.0",
    "httpx>=0.27.0",
    "aiohttp>=3.9",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "evals", "load_test"]
